@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Fl_Text_Editor now correctly handles middle mouse
+	  clicks (STR #1384)
 	- Added some GLUT4 functions (STR #1370)
 	- Added "context_changed()" function for OpenGL windows
 	  which allows efficent texture loading (STR #1372)
